# quid

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  final_production_cleanup.sh  shell.nix
adapters/: bitcoin.c  ssh.c  webauthn.c
build_bak/examples/: adapter_demo  backup_simple_test  production_test  quid_cli  quid_demo  simple_identity
build_bak/tests/: test_auth  test_backup  test_identity  test_integration_complete
docs/: FINAL_CLEANUP_REPORT.md  MODULAR_ARCHITECTURE.md  PROJECT_STATUS.md
docs/developers/: ADAPTER_DEVELOPMENT.md  API_REFERENCE.md  ARCHITECTURE.md  FAQ.md  QUICK_START.md
docs/investors/: BUSINESS_MODEL.md  CASE_STUDIES.md  EXECUTIVE_SUMMARY.md  MARKET_OPPORTUNITY.md  PROBLEM_SOLUTION.md
docs/research/: ML_DSA_IMPLEMENTATION.md  POST_QUANTUM_LIBRARIES.md
examples/: CMakeLists.txt  adapter_demo.c  backup_simple_test  backup_simple_test.c  production_test.c  quid_cli.c  quid_demo.c  simple_identity.c
examples/archive/: adapter_test.c  backup_crypto_test.c  backup_test.c  error_handling_test.c  validation_test.c
include/quid/: endian.h  quid.h
include/quid/adapters/: adapter.h
scripts/: end_to_end_test.sh  run_all_tests.sh
src/core/: adapter_loader.c  auth.c  backup.c  identity.c  identity_internal.h
src/utils/: constants.h  crypto.c  crypto.h  error_handling.c  memory.c  memory.h  random.c  random.h  validation.c  validation.h
tests/: CMakeLists.txt  test_auth.c  test_backup.c  test_bitcoin_adapter.c  test_config.h  test_config.h.in  test_identity.c  test_integration_complete.c  test_ssh_adapter.c  test_thread_safety.c  test_webauthn_adapter.c
tests/archive/: test_bitcoin_adapter.c  test_integration_stable.c  test_simple.c  test_webauthn_adapter.c  test_webauthn_basic.c  test_webauthn_simple.c
tests/fuzzing/: CMakeLists.txt  fuzz_identity.c  fuzzing.dict
tools/: CMakeLists.txt
whitepaper/: WHITEPAPER_V2.md
